# teepee

./: CMakeLists.txt  LICENSE.md  README.md
apps/: CMakeLists.txt  example.c
include/teepee/: getipaddr.h  port.h  teepee.h
src/: CMakeLists.txt  getipaddr.c  teepee.c
